- fixed mobile navigation full bleed.

--- a/src/public/assets/styles/_navigation.scss
+++ b/src/public/assets/styles/_navigation.scss
@@ -166,10 +166,6 @@ mobile-navigation {
   overflow: auto;
   right: 0;
 
-  @include for-tablet-portrait-up() {
-    width: 50%;
-  }
-
   &.open {
     pointer-events: all;
   }
